[project]
name = "vector-bites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.4",
    "groq>=1.1.0",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
